tests/fixtures/fail/prelude_redefine_result.sc
let Result (T: type, E: type) = enum {
  Ok(T),
  Err(E),
}

let main(): i32 = { 42 }
